syntax = "proto3";

message ReadTodoRequest{
  int32 id=1;
}

message ReadTodoResponse{
  int32 id=1;
  string title=2;
  string description=3;
  string status=4;
}
