syntax = "proto3";

message UpdateTodoRequest{
  int32 id=1;
  string title=2;
  string description=3;
  string status=4;
}

message UpdateTodoResponse{
  int32 id=1;
}
